--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -13,10 +13,14 @@
 
                 <!-- Social icons -->
                 <div class="social-icons d-flex gap-3 mt-3">
-                    <a href="#" class="social"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="social"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="social"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#" class="social"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/mohamed.fekry.430814" target="_blank" rel="noopener noreferrer"
+                        class="social"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="www.linkedin.com/in/mohammed-fekry3" target="_blank" rel="noopener noreferrer"
+                        class="social"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://wa.me/+201000005619" target="_blank" rel="noopener noreferrer" class="social"><i
+                            class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="social"><i
+                            class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
 
@@ -24,10 +28,10 @@
             <div class="col-md-2">
                 <h5 class="fw-bold mb-3">Menu</h5>
                 <ul class="list-unstyled footer-links">
-                    <li><a routerLink="">Home</a></li>
-                    <li><a routerLink="">Categories</a></li>
-                    <li><a routerLink="">Favorite</a></li>
-                    <li><a routerLink="">Cart</a></li>
+                    <li><a routerLink="/layout/home">Home</a></li>
+                    <li><a routerLink="/layout/categories">Categories</a></li>
+                    <li><a routerLink="/layout/favorite">Favorite</a></li>
+                    <li><a routerLink="/layout/Cart">Cart</a></li>
                 </ul>
             </div>
 
@@ -35,10 +39,7 @@
             <div class="col-md-3">
                 <h5 class="fw-bold mb-3">Useful Links</h5>
                 <ul class="list-unstyled footer-links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a routerLink="/layout/ContactUs">Contact Us</a></li>
                 </ul>
             </div>
 
@@ -54,7 +55,7 @@
 
         <!-- Copyright -->
         <div class="text-center mt-4 pt-3 border-top">
-            <p class="m-0">© 2025 Foodify. All Rights Reserved.</p>
+            <p class="m-0">© 2025 HumaVolve. All Rights Reserved.</p>
         </div>
 
     </div>
