--- a/src/app/features/components/payment-methods/payment-methods.component.scss
+++ b/src/app/features/components/payment-methods/payment-methods.component.scss
@@ -22,3 +22,9 @@
 .badge.bg-success {
   border-radius: 999px;
 }
+.error {
+  color: #ff4d4f;
+  font-size: 13px;
+  margin-top: 3px;
+  display: block;
+}
