--- a/src/app/features/components/home/home.component.html
+++ b/src/app/features/components/home/home.component.html
@@ -103,7 +103,7 @@
 
                         <div class="d-flex align-items-center gap-2">
 
-                            <button class="fav-btn" (click)="ToggleFavorites(item?.id)">
+                            <button class="fav-btn" (click)="ToggleFavorites(item.id)">
                                 <i class="fa-regular fa-heart"></i>
                             </button>
 
