--- a/src/app/features/components/favorite/favorite.component.html
+++ b/src/app/features/components/favorite/favorite.component.html
@@ -8,7 +8,7 @@
 
         <div class="col-lg-4 col-md-6 col-12" *ngFor="let item of Favorite()">
 
-            <div class="food-card">
+            <div class="food-card ">
                 <div class="image-container">
                     <img [src]="item?.image || 'assets/images/NoImage.jpeg'" alt="Balanced Meals" />
                 </div>
@@ -72,7 +72,7 @@
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
 
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content px-2">
 
             <div class="modal-header mb-1">
                 <h1 class="modal-title fs-5">
@@ -82,7 +82,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
 
-            <div class="modal-body">
+            <div class="modal-body ">
 
                 <div class="food-card" *ngIf="itemDetailes(); else loadingTpl">
                     <div class="image-container">
